# aisight

./: .gitignore  Dockerfile  README.md  pyproject.toml  standalone.Dockerfile
agent/: .gitignore  Dockerfile  README.md  agent.py  image_agent.py  main.py  models.py  pyproject.toml  server.py  server_cli.py  server_combine_terminal.py  setup.py  streamlit_app.py  yolo_client.py  yolo_server.py  yolo_server_cli.py  yolo_server_combine_terminal.py
agent/tests/: tests.py
src/: image_agent.py  mcp-config.json  models.py  result.md  setup.py  streamlit_app.py  yolo_streamlit_app.py
src/fastapi/: app.py
src/geoguesser/: agent.py  main.py  streamlit_ui.py
src/yolo/: agent.py  server.py  streamlit_ui.py
tests/: test_fastapi_app.py  tests.py
